# CMakeHelpers

./: CMakeLists.txt  LICENSE  README.md
test/HeaderOnlyDownloadAndUse/: CMakeLists.txt  main.cpp
test/TypicalUsageOfFreeRTOS/: CMakeLists.txt  main.cpp
